# jni-simple

./: Cargo.toml  LICENSE  README.md  loop_test.sh
.github/workflows/: rust.yml
bitfield_gen/: bfgen.c
example_project/java/RustJNITest/: pom.xml
example_project/java/RustJNITest/src/main/java/org/example/: JNITest.java  Main.java
example_project/rust/rust-jni-example/: Cargo.toml
example_project/rust/rust-jni-example/src/: lib.rs
java_testcode/: DummyClassloader.java  FieldTests.java  MethodCalls.java  RegisterTest.java  ThrowNew.java  ThrowNewZa.java  ThrowNewZa2.java  ThrowNewZa3.java  ThrowNewZa4.java  recompile.sh
jvmti_shim/: Cargo.toml
jvmti_shim/src/: lib.rs
src/: lib.rs  linking.rs
tests/: arrays.rs  attach_and_die.rs  bad_init.rs  bad_version_launch.rs  class.rs  create_bad_argument.rs  define_non_cl.rs  exceptions.rs  fields.rs  getobjreftype.rs  init_error_to_string.rs  init_link.rs  jniInterfaceSetterGetterUb.rs  jtype_debug.rs  jtype_ids.rs  jvmti.rs  jvmtiAlloc.rs  jvmtiCallbacks.rs  jvmtiCapabilities.rs  jvmtiClasses.rs  jvmtiCpu.rs  jvmtiDispose.rs  jvmtiErrorConversion.rs  jvmtiHook.rs  jvmtiModules.rs  jvmtiNewThread.rs  jvmtiProps.rs  jvmtiRawMonitor.rs  jvmtiSfN.rs  jvmtiSuspend.rs  jvmtiSuspendList.rs  jvmtiThread.rs  jvmtiTimers.rs  jvmtiTls.rs  jvmtiVersion.rs  launch_prop.rs  link_sync_test.rs  load_direct.rs  locals.rs  macro_test.rs  (+15 more)
