[package]
name = "jni-simple"
version = "0.3.2"
edition = "2024"
rust-version = "1.87.0"
license = "MIT OR Apache-2.0"
authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
keywords = ["jni", "java", "ffi", "jvmti"]
categories = ["api-bindings", "no-std"]
description = "Simple Rust binding for JNI (Java Native Interface) and JVMTI (JVM Tool Interface)"
readme = "README.md"
repository = "https://github.com/AlexanderSchuetz97/jni-simple"
exclude = [
    "example_project/*",
    "loop_test.sh",
    "jvmti_shim/target",
    "bitfield_gen/*",
    "java_testcode/*.java",
    "java_testcode/*.sh",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
libloading = { version = "^0.8.9", optional = true }
sync-ptr = { version = "^0.2.1", features = ["fnptr"] }
spin = { version = "0.10.0", default-features = false, features = ["rwlock"] }

[dev-dependencies]
static_assertions = "1.1.0"


[features]
default = ["std"]
std = []
asserts = []
dynlink = []
loadjvm = ["libloading", "std"]
