[package]
name = "jni-simple"
version = "0.3.2"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
authors = ["Alexander Schütz <aschuetz@protonmail.com>"]
keywords = ["jni", "java", "ffi", "jvmti"]
categories = ["api-bindings", "no-std"]
description = "Simple Rust binding for JNI (Java Native Interface) and JVMTI (JVM Tool Interface)"
readme = "README.md"
repository = "https://github.com/AlexanderSchuetz97/jni-simple"
exclude = [
    "example_project/*",
    "loop_test.sh",
    "jvmti_shim/target",
    "bitfield_gen/*",
    "java_testcode/*.java",
    "java_testcode/*.sh",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
libloading = { version = "^0.9.0", optional = true, default-features = false }
sync-ptr = { features = ["fnptr"], git = "https://github.com/AlexanderSchuetz97/sync-ptr.git", rev = "c19893f3e1260393783ea34488c6bfe68be225c9" }

[dev-dependencies]
static_assertions = "1.1.0"


[features]
default = ["std"]
std = []
asserts = []
dynlink = []
loadjvm = ["libloading"]
